--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,154 +1,2 @@
-
-<div
-  class="alert alert-primary alert-dismissible fade show"
-  role="alert"
->
-  <button
-    type="button"
-    class="btn-close"
-    data-bs-dismiss="alert"
-    aria-label="Close"
-  ></button>
-  <strong>Alert Heading</strong> Alert Content
-</div>
-
-<script>
-  var alertList = document.querySelectorAll(".alert");
-  alertList.forEach(function (alert) {
-    new bootstrap.Alert(alert);
-  });
-</script>
-<div class="card">
-  <div class="card-header">
-    <h6 class="text-center">Employee Registeration Form</h6>
-    <div class="card-body">
-      <form>
-        <div class="row">
-          <div class="form-group col">
-            <label for="">Department</label>
-            <select name="" id="" class="form-control">
-              <option value="">---Select---</option>
-              <option value="">Accounts</option>
-              <option value="">Manager</option>
-              <option value="">Admin</option>
-            </select>
-          </div>
-          
-          <div class="form-group col">
-            <label for="">Employee Name</label>
-           <input type="text" class="form-control">
-          </div>
-
-          <div class="form-group col">
-            <label for="">mobile number</label>
-           <input type="text" class="form-control">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="form-group col">
-            <label for="">Gender</label>
-            <select name="" id="" class="form-control">
-              <option value="">---Select---</option>
-              <option value="">Male</option>
-              <option value="">Female</option>
-             
-            </select>
-          </div>
-          
-          <div class="form-group col">
-            <label for="">Date of Join</label>
-           <input type="date" class="form-control">
-          </div>
-
-          <div class="form-group col">
-            <label for="">Email</label>
-           <input type="email" class="form-control">
-          </div>
-        </div>
-
-        <div class="row mt-2">
-          <div class="form-group col">
-            <label for="">Salary</label>
-            <input type="text" class="form-control">
-          </div>
-          
-          <div class="form-group col">
-            <label for="">Password</label>
-           <input type="password" class="form-control">
-          </div>
-
-          <div class="form-group col">
-            <label for="">Confirm-Password</label>
-           <input type="password" class="form-control">
-          </div>
-        </div>
-
-        <div class="row mt-2">
-          <div class="form-group col">
-            <input type="checkbox" name="" id="" class="form-check-input">
-            <label for="">Active</label>
-          </div>
-        </div>
-
-        <div class="row mt-2">
-          <div class="form-group text-center">
-            <button class="btn btn-success me-2">Save</button>
-            <button class="btn btn-warning me-2">Reset</button>
-            <button class="btn btn-danger me-2">Cancel</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-
-<div class="card mt-2">
-  <div class="card-header text-center">
-    <h6>Employee List</h6>
-  </div>
-  <div class="card-body">
-    <div class="row">
-      <div
-        class="table-responsive"
-      >
-        <table
-          class="table  table-bordered table-striped table-responsive"
-        >
-          <thead>
-            <tr>
-              <th scope="col">Department</th>
-              <th scope="col">Employee Name</th>
-              <th scope="col">Gender</th>
-              <th scope="col">Mobile</th>
-              <th scope="col">Joining Date</th>
-              <th scope="col">Email</th>
-              <th scope="col">Action</th>
-
-
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="">
-              <td scope="row">Accounts</td>
-              <td>Rakesah kumar</td>
-              <td>male</td>
-              <td>987654321</td>
-              <td>20.1.2024</td>
-              <td>rakesh_at_gmail.com</td>
-              <td class="text-center">
-                <button class="me-2 btn btn-primary"><i class="fa-solid fa-pen-to-square"></i> Edit</button>
-                <button class="me-2 btn btn-info text-light"><i class="fa-solid fa-circle-info"></i> Detail</button>
-                <button class="me-2 btn btn-danger"><i class="fa-solid fa-trash"></i> Delete</button>
-              </td>
-            </tr>
-           
-          </tbody>
-        </table>
-      </div>
-      
-    </div>
-  </div>
-</div>
-<div class="conatiner">
-</div>
+<h1>HR Management</h1>
+<app-employee-reg></app-employee-reg>
