--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>HR Management</h1>
-<app-employee-reg></app-employee-reg>
+<app-navbar></app-navbar>
+<!-- <app-employee-reg></app-employee-reg> -->
+<router-outlet></router-outlet>
