--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,71 +1,70 @@
 <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-6">
-        <h1 class="bg-warning text-light text-center">Login</h1>
-  
-        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              id="email"
-              class="form-control"
-              formControlName="email"
-            />
-            <div
-              *ngIf="
-                loginForm?.get('email')?.invalid &&
-                (loginForm?.get('email')?.dirty ||
-                  loginForm?.get('email')?.touched)
-              "
+  <div class="row justify-content-center">
+    <div class="col-md-4 col-sm-2">
+      <h1 class="bg-primary rounded text-light text-center pb-2">Login</h1>
+
+      <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            id="email"
+            class="form-control"
+            formControlName="email"
+          />
+          <div
+            *ngIf="
+              loginForm?.get('email')?.invalid &&
+              (loginForm?.get('email')?.dirty ||
+                loginForm?.get('email')?.touched)
+            "
+          >
+            <small
+              class="text-danger"
+              *ngIf="loginForm?.get('email')?.errors?.['required']"
+              >Email is required.</small
             >
-              <small
-                class="text-danger"
-                *ngIf="loginForm?.get('email')?.errors?.['required']"
-                >Email is required.</small
-              >
-              <small
-                class="text-danger"
-                *ngIf="loginForm?.get('email')?.errors?.['email']"
-                >Invalid email format.</small
-              >
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input
-              type="password"
-              id="password"
-              class="form-control"
-              formControlName="password"
-            />
-            <div
-              *ngIf="
-                loginForm?.get('password')?.invalid &&
-                (loginForm?.get('password')?.dirty ||
-                  loginForm?.get('password')?.touched)
-              "
+            <small
+              class="text-danger"
+              *ngIf="loginForm?.get('email')?.errors?.['email']"
+              >Invalid email format.</small
             >
-              <small
-                class="text-danger"
-                *ngIf="loginForm?.get('password')?.errors?.['required']"
-                >Password is required.</small
-              >
-            </div>
           </div>
-          <div class="container">
-            <div class="row">
-              <button
-                type="submit"
-                [disabled]="loginForm.invalid"
-                class="btn btn-success btn-md p-2 mt-2 btn-block"
-              >
-                Login
-              </button>
-            </div>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            class="form-control"
+            formControlName="password"
+          />
+          <div
+            *ngIf="
+              loginForm?.get('password')?.invalid &&
+              (loginForm?.get('password')?.dirty ||
+                loginForm?.get('password')?.touched)
+            "
+          >
+            <small
+              class="text-danger"
+              *ngIf="loginForm?.get('password')?.errors?.['required']"
+              >Password is required.</small
+            >
           </div>
-        </form>
-      </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <button
+              type="submit"
+              [disabled]="loginForm.invalid"
+              class="btn btn-success btn-md p-2 mt-2 btn-block"
+            >
+              Login
+            </button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-  
+</div>
