--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-blue mb-4">
+<nav class="navbar navbar-expand-md navbar-dark bg-blue mb-0 ">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         ADIT-HRM
@@ -26,13 +26,13 @@
             <a class="nav-link" routerLink="/" >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" 
+            <a class="nav-link" routerLink="/dashboard" routerLinkActive="active"
               ><i class="fa-solid fa-people-roof"></i> Dashboard</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about-us" routerLinkActive="active"
-              >About Us</a
+            <a class="nav-link" routerLink="/employeeform" routerLinkActive="active"
+              ><i class="fa-solid fa-circle-plus"></i> Employee</a
             >
           </li>
   
