--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,9 @@
 .nav-link.active {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow on hover */
-    border-radius: 5px;
-    transition: box-shadow 0.3s ease;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow on hover */
+  border-radius: 5px;
+  transition: box-shadow 0.3s ease;
+}
+
+img {
+  mix-blend-mode: multiply;
 }
