--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,7 +23,7 @@
       >
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/" >Home</a>
+            <a class="nav-link" routerLink="/home" routerLinkActive="active" >Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/dashboard" routerLinkActive="active"
