--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,9 @@
 /* You can add global styles to this file, and also import other style files */
 h1 {font-size: 2.4rem;margin-bottom: 30px;}
 .bg-blue {background-color:#4311f8;}
-.navbar-brand img { height:30px; }
+.navbar-brand img { height:50px;
+
+}
 .navbar-dark .navbar-nav .nav-link {color:#fff;}
 .navbar-dark .navbar-nav .active .nav-link {color:#fff;}
 .banner img {width:100%;}
