--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,37 +1,95 @@
 <div class="container py-4">
     <header class="pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
-        <span class="fs-4">Jumbotron example</span>
+        <span class="fs-4">Human Resource Management Project</span>
       </a>
     </header>
 
     <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-        <button class="btn btn-primary btn-lg" type="button">Example button</button>
-      </div>
+        <h1 class="display-5 fw-bold fs-2 bg-success text-light">What we Do </h1>
+        <p class="col-md-10 fs-5">At our Company <strong><u>ADIT-HRM</u></strong>, we understand that the success of any organization hinges on its people. Our comprehensive HRM services are designed to help businesses of all sizes attract, develop, and retain top talent while ensuring compliance with employment laws and regulations.</p>
+        <p class="col-md-10 fs-5">Our team of HRM experts brings years of experience and industry knowledge to help you overcome HR challenges and achieve your business objectives.
+            Personalized Approach: We understand that every organization is unique. That's why we tailor our services to meet your specific needs and goals.</p>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button" disabled><span class="fs-4">Our Service will be </span>
+                    <span class="spinner-grow spinner-grow-sm" aria-hidden="true"></span>
+                    <span role="status">online soon...</span>
+                  </button>
+              </div>      </div>
     </div>
 
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
-        <div class="h-100 p-5 text-white bg-dark rounded-3">
-          <h2>Change the background</h2>
-          <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-          <button class="btn btn-outline-light" type="button">Example button</button>
+        <div class="h-100 p-5 bg-light   rounded-3">
+          <h2>Salary Management</h2>
+          <p>Our team of experienced compensation professionals works closely with your company to develop customized compensation strategies tailored to your unique business goals and workforce needs. From designing salary structures and conducting market research to facilitating salary reviews and adjustments, we provide comprehensive solutions to ensure fair and equitable compensation practices across your organization. Our technology-driven approach streamlines processes, allowing you to focus on strategic initiatives while we handle the details of salary management.</p>
+          <button class="btn btn-success " type="button">Savings</button>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="h-100 p-5 bg-light border rounded-3">
-          <h2>Add borders</h2>
-          <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-          <button class="btn btn-outline-secondary" type="button">Example button</button>
+        <div class="h-100 p-5 bg-light  rounded-3">
+          <h2>Track All Records</h2>
+          <p>We have a proven track record of designing and implementing effective compensation strategies that align with our clients' business objectives and industry standards. Our team of compensation professionals conducts thorough market research and analysis to ensure that our clients' salary structures remain competitive and attractive to top talent.We take pride in our track record of success and look forward to helping your organization achieve its compensation goals. Contact us today to learn more about how we can add value to your business.</p>
+          <button class="btn btn-outline-warning text-secondary " type="button">All Records</button>
         </div>
       </div>
     </div>
+    <div class="container card bg-light p-4 mt-4 text-center">
+        <h1>Our Location</h1>
+        <div class="card">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.1899513737844!2d77.53008642588782!3d13.023572613735078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae16773c548eed%3A0xc7d6a93a1aa5c367!2sNATIONAL%20SKILL%20TRAINING%20INSTITUTE%2C%20Raja%20Industrial%20Estate%2C%20Yeswanthpur%2C%20Bengaluru%2C%20Karnataka%20560022!5e0!3m2!1sen!2sin!4v1712056553090!5m2!1sen!2sin"  height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
 
-    <footer class="pt-3 mt-4 text-muted border-top">
-      © 2021
-    </footer>
+    <footer class="bg-primary text-white text-center text-lg-start mt-2 card">
+        <!-- Grid container -->
+        <div class="container p-4">
+          <!--Grid row-->
+          <div class="row">
+            <!--Grid column-->
+            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+              <h5 class="text-uppercase"><b> <mark>MEAN Stack Project</mark> Elective Module-3</b></h5>
+      
+              <p>
+                With our MEAN stack HRM project, you can streamline recruitment processes, track employee performance, manage payroll and benefits, and facilitate employee engagement and development initiatives—all within a single, integrated system. Our solution is designed to enhance efficiency, improve decision-making, and empower HR professionals to drive organizational success.
+              </p>
+            </div>
+            <!--Grid column-->
+      
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase">Made by</h5>
+      
+              <ul class="list-unstyled mb-0">
+                <li class="text-light">Rakesh Kumar gupta</li>
+                <li class="text-light">Sumit Singh</li>
+                <li class="text-light">Raj Kumar Behera</li>
+                <li class="text-light">Rajeev Kumar</li>
+              </ul>
+            </div>
+            <!--Grid column-->
+      
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase mb-0">From NSTI-Bengaluru</h5>
+              <ul class="list-unstyled mb-0">
+                <li class="text-light">Advance Diploma in IT Networking and Cloud Computing</li>
+             
+              </ul>
+             
+            </div>
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+      
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2024 Copyright:
+          <a class="text-white" href="https://nstibengaluru.dgt.gov.in/">HindiCoders-NSTI-Bengaluru</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
   </div>
