--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,7 +37,7 @@
           </li>
   
           <li class="nav-item">
-            <a class="nav-link" routerLink="/contact-us" routerLinkActive="active"
+            <a class="nav-link" routerLink="/contact" routerLinkActive="active"
               >Contact Us</a
             >
           </li>
