home design adjusted

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -19,7 +19,7 @@ figure {
 
 
 .sidebar {
-  background-color:#4311f8;
+  background-color:#0149fd;
   box-shadow: none;
   border: solid 3px white;
   border-radius: 5px;
