--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,9 @@
       </a>
     </header>
 
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold fs-2 bg-success text-light">What we Do </h1>
+    <div class=" bg-light rounded-3">
+      <div class="container-fluid ">
+        <h1 class="display-5 fw-bold fs-2">What we Do </h1>
         <p class="col-md-10 fs-5">At our Company <strong><u>ADIT-HRM</u></strong>, we understand that the success of any organization hinges on its people. Our comprehensive HRM services are designed to help businesses of all sizes attract, develop, and retain top talent while ensuring compliance with employment laws and regulations.</p>
         <p class="col-md-10 fs-5">Our team of HRM experts brings years of experience and industry knowledge to help you overcome HR challenges and achieve your business objectives.
             Personalized Approach: We understand that every organization is unique. That's why we tailor our services to meet your specific needs and goals.</p>
