--- a/src/app/admin/registration/registration.component.html
+++ b/src/app/admin/registration/registration.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-4 col-sm-2">
       <h1 class="text-center bg-primary rounded text-light text-center pb-2">
